--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,20 @@
           autocomplete="off"
           placeholder="Search images..."
         />
+        
         <button type="submit">Search</button>
+        <br>
+        <div class="checkbox-container">
+          <p>By default, images are horizontal.<br>
+             If you want vertical images, switch toggle.
+          </p>
+        
+          <label class="switch">
+            <input type="checkbox" name="switch">
+            <span class="slider round"></span>
+          </label>
+
+        </div>
       </form>
     </div>
 
