--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
           autocomplete="off"
           placeholder="Search images..."
         />
-        
+
         <button type="submit">Search</button>
         <br>
         <div class="checkbox-container">
@@ -29,6 +29,21 @@
             <input type="checkbox" name="switch">
             <span class="slider round"></span>
           </label>
+        </div>
+        <div class="choose">
+          <p>Choose the amount of photos:</p>
+            <label class="choose_label">
+              <input class="choose__item" type="radio" name="perPage" value="40" checked />
+             40
+            </label>
+            <label class="choose_label">
+              <input class="choose__item" type="radio" name="perPage" value="80" />
+              80
+            </label>
+            <label class="choose_label">
+              <input class="choose__item" type="radio" name="perPage" value="180" />
+              180
+            </label>
 
         </div>
       </form>
