--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
           </label>
         </div>
         <div class="choose">
-          <p>Choose the amount of photos:</p>
+          <p>Choose the quantity of photos:</p>
             <label class="choose_label">
               <input class="choose__item" type="radio" name="perPage" value="40" checked />
              40
@@ -52,9 +52,10 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <div class="conteiner-btn-more">
+    <div class="guard"></div>
+    <!-- <div class="conteiner-btn-more">
       <button type="button" class="load-more is-hidden">More</button>
-    </div>
+    </div> -->
   
   </body>
 </html>
