--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
 
     <div class="conteiner-form">
       <form class="search-form" id="search-form">
-        <input
+        <input class="input"
           type="text"
           name="searchQuery"
           autocomplete="off"
           placeholder="Search images..."
         />
-
-        <button type="submit">Search</button>
+        <button class="clear-btn" type="button" hidden><img src="./png/icons8-close-50.png" alt="close"></button>
+        <button  class="search-btn" type="submit">Search</button>
         <br>
         <div class="checkbox-container">
           <p>By default, images are horizontal.<br>
