--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button class="clear-btn" type="button" hidden><img src="./png/icons8-close-50.png" alt="close"></button>
+        <button class="clear-btn" type="button" hidden><img src="./images/png/icons8-close-50.png" alt="close"></button>
         <button  class="search-btn" type="submit">Search</button>
         <br>
         <div class="checkbox-container">
