--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,13 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
+
+    <!------------btn back top-------------->
+    <button id="myBtn" title="Go to top"><img src="./images/png/icons8-up-50.png" alt="back top"></button>
+
     <div class="guard"></div>
+
+    <!---------Btn load-more-------------->
     <!-- <div class="conteiner-btn-more">
       <button type="button" class="load-more is-hidden">More</button>
     </div> -->
